# llama.cpp-triattention-mtp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  start-server.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  performance_report.yml
common/: arg.cpp  common.cpp  common.h
docs/: TRIATTENTION-API.md  TRIATTENTION.md  benchmarks.md  notes.md
ggml/include/: ggml-cuda.h  ggml.h
ggml/src/: ggml-common.h  ggml-quants.c  ggml-quants.h  ggml-turbo-quant.c  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp
ggml/src/ggml-cuda/: convert.cu  dequantize.cuh  (+3 more)
include/: llama.h
scripts/: llama-server-start.bat
src/: CMakeLists.txt  llama-arch.cpp  llama-context.cpp  llama-graph.cpp  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-triattention-calibration.cpp  llama-triattention-calibration.h  llama-triattention-file.cpp  llama-triattention-file.h  llama-triattention.cpp  llama-triattention.h
src/models/: qwen35.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-quant-type-selection.cpp  test-quantize-fns.cpp  test-triattention-calibration.cpp  test-triattention-fallback.cpp  test-triattention-file.cpp  triattention-corpus.txt
tools/: CMakeLists.txt
tools/server/: server-context.cpp
tools/triattention-calibrate/: CMakeLists.txt  triattention-calibrate.cpp
(+6 files in other folders)
